--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "templates/server"]
 	path = templates/server
 	url = https://github.com/PaperHS/Forge-java-demo.git
+[submodule "server"]
+	path = server
+	url = https://github.com/PaperHS/Forge-java-demo.git
