remove python desc

--- a/templates/package.json
+++ b/templates/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forge-python-starter",
+  "name": "forge-java-starter",
   "version": "0.0.1",
   "main": "src/index.js",
   "keywords": [
