--- a/templates/package.json
+++ b/templates/package.json
@@ -9,21 +9,27 @@
     "react",
     "javascript"
   ],
-  "homepage": "https://github.com/ArcBlock/forge-dapp-starters/tree/master/packages/forge-react-starter",
+  "homepage": "https://github.com/ArcBlock/forge-java-starter",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArcBlock/forge-dapp-starters/tree/master/packages/forge-react-starter"
+    "url": "https://github.com/ArcBlock/forge-java-starter"
   },
   "bugs": {
-    "url": "https://github.com/ArcBlock/forge-dapp-starters/issues",
-    "email": "shijun@arcblock.io"
+    "url": "https://github.com/ArcBlock/forge-java-starter/issues",
+    "email": "shan@arcblock.io"
   },
   "dependencies": {
-    "@arcblock/forge-wallet": "^0.36.0",
-    "@arcblock/graphql-client": "^0.36.0",
-    "@arcblock/mcrypto": "^0.36.0",
-    "@arcblock/react-forge": "^0.5.13",
-    "@material-ui/core": "^3.9.3",
+    "@arcblock/did": "^1.0.4",
+    "@arcblock/did-auth": "^1.0.6",
+    "@arcblock/did-auth-storage-mongo": "^1.0.0",
+    "@arcblock/did-react": "^0.48.0",
+    "@arcblock/forge-sdk": "^1.0.4",
+    "@arcblock/forge-util": "^1.0.4",
+    "@arcblock/forge-wallet": "^1.0.4",
+    "@arcblock/mcrypto": "^1.0.4",
+    "@arcblock/ux": "^0.48.0",
+    "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.19.0",
     "core-js": "2.5.7",
     "dotenv": "^8.0.0",
@@ -41,7 +47,7 @@
     "lint": "eslint src",
     "precommit": "yarn lint",
     "prepush": "yarn lint",
-    "start": "npm-run-all --parallel start:*",
+    "start": "yarn start:client",
     "start:client": "react-scripts start",
     "build": "npm-run-all build:*",
     "build:client": "react-scripts build",
