--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@arcblock/forge-wallet": "^1.0.33",
     "@arcblock/graphql-client": "^1.0.33",
     "@arcblock/mcrypto": "^1.0.33",
+    "@hutson/set-npm-auth-token-for-ci": "^5.0.0",
     "chalk": "^2.4.2",
     "child_process": "^1.0.2",
     "inquirer": "^7.0.0",
@@ -38,7 +39,5 @@
     "extends": "react-app"
   },
   "license": "Apache-2.0",
-  "devDependencies": {
-    "@hutson/set-npm-auth-token-for-ci": "^5.0.0"
-  }
+  "devDependencies": {}
 }
